3.5.2/_sources/gallery/pyplots/axline.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/pyplots/axline.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_pyplots_axline.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_pyplots_axline.py:


==============
Infinite lines
==============

`~.axes.Axes.axvline` and `~.axes.Axes.axhline` draw infinite vertical /
horizontal lines, at given *x* / *y* positions. They are usually used to mark
special data values, e.g. in this example the center and limit values of the
sigmoid function.

`~.axes.Axes.axline` draws infinite straight lines in arbitrary directions.

.. GENERATED FROM PYTHON SOURCE LINES 13-30

.. code-block:: default

    import numpy as np
    import matplotlib.pyplot as plt

    t = np.linspace(-10, 10, 100)
    sig = 1 / (1 + np.exp(-t))

    plt.axhline(y=0, color="black", linestyle="--")
    plt.axhline(y=0.5, color="black", linestyle=":")
    plt.axhline(y=1.0, color="black", linestyle="--")
    plt.axvline(color="grey")
    plt.axline((0, 0.5), slope=0.25, color="black", linestyle=(0, (5, 5)))
    plt.plot(t, sig, linewidth=2, label=r"$\sigma(t) = \frac{1}{1 + e^{-t}}$")
    plt.xlim(-10, 10)
    plt.xlabel("t")
    plt.legend(fontsize=14)
    plt.show()




.. image-sg:: /gallery/pyplots/images/sphx_glr_axline_001.png
   :alt: axline
   :srcset: /gallery/pyplots/images/sphx_glr_axline_001.png, /gallery/pyplots/images/sphx_glr_axline_001_2_0x.png 2.0x
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 31-35

`~.axes.Axes.axline` can also be used with a ``transform`` parameter, which
applies to the point, but not to the slope. This can be useful for drawing
diagonal grid lines with a fixed slope, which stay in place when the
plot limits are moved.

.. GENERATED FROM PYTHON SOURCE LINES 35-43

.. code-block:: default


    for pos in np.linspace(-2, 1, 10):
        plt.axline((pos, 0), slope=0.5, color='k', transform=plt.gca().transAxes)

    plt.ylim([0, 1])
    plt.xlim([0, 1])
    plt.show()




.. image-sg:: /gallery/pyplots/images/sphx_glr_axline_002.png
   :alt: axline
   :srcset: /gallery/pyplots/images/sphx_glr_axline_002.png, /gallery/pyplots/images/sphx_glr_axline_002_2_0x.png 2.0x
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 44-52

.. admonition:: References

   The use of the following functions, methods, classes and modules is shown
   in this example:

   - `matplotlib.axes.Axes.axhline` / `matplotlib.pyplot.axhline`
   - `matplotlib.axes.Axes.axvline` / `matplotlib.pyplot.axvline`
   - `matplotlib.axes.Axes.axline` / `matplotlib.pyplot.axline`


.. _sphx_glr_download_gallery_pyplots_axline.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: axline.py <axline.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: axline.ipynb <axline.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
